--- a/notifications.html
+++ b/notifications.html
@@ -24,7 +24,7 @@ a{color:white;}
 <div class="card">
     <div class="card-body text-white">
 	
-<h2><a href="user.html">
+<h2><a href="index.html">
 <i class="fa fa-arrow-left" aria-hidden="true"></i><a>Notification</h2>
 
 
